<resources>
    <string name="app_name">Absensi Siswa</string>
    <string name="hold_card_in_back">Hold a tag against the back of your device</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sdn_percoba">SDN PERCOBAAN 1 \nMALANG</string>
    <string name="guru">GURU</string>
    <string name="orang_tua">ORANG TUA</string>
    <string name="nip">NIP</string>
    <string name="password">Password</string>
    <string name="nis">Nomor Induk Siswa</string>
    <string name="title_activity_main_guru">Absensi Siswa</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_about">About</string>
    <string name="title_kelas_sdn">KELAS SDN PERCOBAAN 1 MALANG</string>
    <string name="kelas_1a">Kelas 1A</string>
    <string name="kelas_2a">Kelas 2A</string>
    <string name="kelas_1b">Kelas 1B</string>
    <string name="kelas_1c">Kelas 1C</string>
    <string name="kelas_3b">Kelas 3B</string>
    <string name="kelas_3a">Kelas 3A</string>
    <string name="kelas_2b">Kelas 2B</string>
    <string name="kelas_tinggi">Kelas Tinggi</string>
    <string name="kelas_rendah">Kelas Rendah</string>
    <string name="kelas_4a">Kelas 4A</string>
    <string name="kelas_4b">Kelas 4B</string>
    <string name="kelas_4c">Kelas 4C</string>
    <string name="kelas_5a">Kelas 5A</string>
    <string name="kelas_5b">Kelas 5B</string>
    <string name="kelas_6a">Kelas 6A</string>
    <string name="kelas_6b">Kelas 6B</string>
    <string name="icon_kelas">icon_kelas</string>
    <string name="biodata_diri">Biodata Diri</string>
    <string name="subtitle_nama_lengkap">Nama Lengkap</string>
    <string name="nama_lengkap_hint">Nama lengkap</string>
    <string name="someone_something">Someone something</string>
    <string name="line">line</string>
    <string name="somewhere">Somewhere</string>
    <string name="kota_lahir">Kota Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="someday">Someday</string>
    <string name="agama">Agama</string>
    <string name="something">Something</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nomor_telepon_hp">Nomor Telepon (Hp)</string>
    <string name="someone_something_com">someone@something.com</string>
    <string name="email">Email</string>
    <string name="icon_edit">icon_edit</string>
    <string name="icon_check">icon_check</string>
    <string name="masukkan_email">Masukkan email disini.</string>
    <string name="masukkan_nomor_hp">Masukkan nomor telepon/HP disini.</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="islam">Islam</string>
    <string name="katolik">Katolik</string>
    <string name="hindu">Hindu</string>
    <string name="budha">Budha</string>
    <string name="pilih_agama">Pilih agama:</string>
    <string name="pilih_tanggal_lahir">Pilih tanggal lahir</string>
    <string name="tanggal_0">00/00/0000</string>
    <string name="masukkan_kota_lahir">Masukkan kota lahir disini.</string>
    <string name="kota_lahir_hint">Kota lahir</string>
    <string name="tanggal_lahir_hint">Tanggal lahir</string>
    <string name="nomor_telepon_hint">Nomor telepon</string>
    <string name="email_hint">Email</string>
    <string name="pending">Pending</string>
    <string name="terkirim">Terkirim</string>
    <string name="masukkan_nama_lengkap">Masukkan nama lengkap disini.</string>
    <string name="title_activity_kelas">Kelas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kelas Rendah</string>
    <string name="nav_header_subtitle">Kelas XX</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="var_tipe_kelas">TIPE_KELAS</string>
    <string name="var_nama_kelas">NAMA_KELAS</string>
    <string name="const_kelas_rendah">KELAS_RENDAH</string>
    <string name="const_kelas_tinggi">KELAS_TINGGI</string>
    <string name="title_jadwal_pelajaran">Jadwal Pelajaran</string>
    <string name="desc_gambar_jadwal_pelajaran">Gambar jadwal pelajaran</string>
    <string name="gambar_format_jadwal_pelajaran">Gambar format .jpg/.jpeg/.png</string>
    <string name="title_daftar_siswa">Daftar Siswa</string>
    <string name="desc_button_check">button check</string>
    <string name="desc_button_edit">button edit</string>
    <string name="header_lp">L/P</string>
    <string name="header_nama">Nama</string>
    <string name="header_nisn">NISN</string>
    <string name="header_no_induk">No Induk</string>
    <string name="header_no">No</string>
    <string name="title_nfc_reader">NFC Reader</string>
    <string name="label_scan_nfc_tag">Scan NFC Tag</string>
    <string name="label_history">History</string>
    <string name="ready_to_scan">Ready to scan</string>
    <string name="dekatkan_kartu_tag">Dekatkan kartu ID ke HP</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_nfc_result">Result</string>
    <string name="label_scan_nfc_tag_result">Scan NFC Tag selesai</string>
    <string name="label_id_card_nfc">ID Card NFC</string>
    <string name="label_no_induk">No. Induk</string>
    <string name="permintaan_ijin">Permintaan Ijin</string>
    <string name="search_icon">Search icon</string>
    <string name="nis_disini">Masukkan nomor induk siswa disini.</string>
    <string name="no_induk_siswa">No. induk siswa</string>
    <string name="absensi">Absensi</string>
    <string name="filter">Filter:</string>
    <string name="tanpa_ket">Tanpa Ket</string>
    <string name="dari">Dari:</string>
    <string name="ke_tanggal">Ke tanggal</string>
    <string name="ke">Ke</string>
    <string name="icon_search_absensi">icon search absensi</string>
    <string name="sikap">Sikap</string>
    <string name="pelanggaran">Pelanggaran</string>
    <string name="laporan_catatan">Laporan Catatan</string>
    <string name="icon_search_laporan_catatan">icon search laporan catatan</string>
    <string name="tanggal">Tanggal</string>
    <string name="dari_tanggal">Dari tanggal</string>
    <string name="header_tgl">Tanggal</string>
    <string name="header_waktu">Waktu</string>
    <string name="header_ket">Ket</string>
    <string name="header_view_file">View File</string>
    <string name="alasan_tidak_hadir">Alasan Tidak Hadir</string>
    <string name="sakit">Sakit</string>
    <string name="symbol_slash">/</string>
    <string name="ijin">Ijin</string>
    <string name="catatan">Catatan</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="subjek_t">Subjek \t: </string>
    <string name="tahun_ajaran">Tahun Ajaran</string>
    <string name="kelas_semester">Kelas/Semester</string>
    <string name="tema">Tema</string>
    <string name="sub_tema">Sub Tema</string>
    <string name="pembelajaran">Pembelajaran</string>
    <string name="jenis_nilai">Jenis Nilai</string>
    <string name="nilai">Nilai</string>
    <string name="raport">Raport</string>
    <string name="upload_file">Upload File</string>
    <string name="pdf">(*.pdf)</string>
    <string name="laporan_raport">Laporan Raport</string>
    <string name="title_activity_main_ortu">Home</string>
    <string name="menu">Menu</string>
    <string name="subtitle_nama_anak">Nama Anak</string>
    <string name="nama_anak_hint">Nama Anak</string>
    <string name="nama_anak_disini">Masukkan nama anak anda disini</string>
    <string name="laporan_absensi">Laporan Absensi</string>
    <string name="laporan_nilai_akademik">Laporan Nilai Akademik</string>
    <string name="kelas_2c">Kelas 2C</string>
    <string name="title_activity_about_guru_edit">Edit About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">LOGIN</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="logout">Logout</string>
    <string name="na">No data.</string>
    <string name="please_wait">Please wait ...</string>
    <string name="detail">Detail</string>
    <string name="dots">...</string>
    <string name="perempuan">Perempuan</string>
    <string name="masukkan_detil_nilai">Masukkan detil nilai</string>
    <string name="masukkan_tahun_ajaran">Masukkan tahun ajaran</string>
    <string name="masukkan_kelas_semester">Masukkan kelas/semester</string>
    <string name="masukkan_tema">Masukkan tema</string>
    <string name="masukkan_sub_tema">Masukkan sub-tema</string>
    <string name="masukkan_pembelajaran">Masukkan pembelajaran</string>
    <string name="masukkan_jenis_nilai">Masukkan jenis nilai</string>
    <string name="masukkan_nilai">Masukkan nilai</string>
    <string name="nomor_nilai_akademik">Nomor nilai akademik</string>
    <string name="masukkan_nomor_nilai_akademik">Masukkan nomor nilai akademik</string>
    <string name="header_tanggal">Tanggal</string>
    <string name="header_mata_pelajaran">Mata Pelajaran</string>

    <string name="Logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="Contacts">Contacts</string>
    <string name="AddContacts">Add Contacts</string>
    <string name="title_activity_main">Chat</string>
</resources>