<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.guru.home.menukelas.nilaiakademik.AddNilaiAkademikFragment">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor">

            <TextView
                android:id="@+id/title_add_nilai_akad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/masukkan_detil_nilai"
                android:textAppearance="@style/biodata_diri"
                android:gravity="top"
                />

            <LinearLayout
                android:id="@+id/container_detil_add_nilai_akad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_add_nilai_akad">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nis"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/no_induk_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/nis"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/nis_disini" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nama_siswa"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/nama_siswa_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/nama_siswa"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_nama_lengkap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tahun_ajaran"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/tahun_ajaran_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/tahun_ajaran"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_tahun_ajaran" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/kelas_semester"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/kelas_semester_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/kelas_semester"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_kelas_semester" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tema"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/tema_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/tema"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_tema" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sub_tema"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/sub_tema_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/sub_tema"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_sub_tema" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pembelajaran"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/pembelajaran_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/pembelajaran"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_pembelajaran" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/jenis_nilai"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/jenis_nilai_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/jenis_nilai"
                    android:textIsSelectable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_jenis_nilai" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nilai"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/nilai_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/nilai"
                    android:textIsSelectable="true"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_nilai" />

                <TextView
                    android:id="@+id/title_nomor_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nomor_nilai_akademik"
                    android:textAppearance="@style/biodata_diri_subtitle"/>

                <EditText
                    android:id="@+id/nomor_add_nilai_akad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_content"
                    android:hint="@string/nomor_nilai_akademik"
                    android:inputType="text"
                    android:textIsSelectable="true"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:background="@drawable/line"
                    android:autofillHints="@string/masukkan_nomor_nilai_akademik" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/bt_save_add_nilai_akad"
                android:layout_width="@dimen/size_button"
                android:layout_height="@dimen/size_button"
                android:layout_marginTop="@dimen/margin_biodata_content_edit"
                android:background="@drawable/ic_check"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/container_detil_add_nilai_akad"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/icon_check" />

            <View
                android:id="@+id/bottom_border_about_guru"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_biodata_content"
                android:background="@color/transparent"
                app:layout_constraintTop_toBottomOf="@id/bt_save_add_nilai_akad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/pb_ll_add_nilai_akad"
        layout="@layout/progress_bar"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>